--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -415,7 +415,7 @@
         width: 622px;
         height: 295px;
     }
-    
+
     &__logo {
         &--first,
         &--second,
@@ -428,23 +428,30 @@
             left: 0;
             width: 100%;
             height: 100%;
-            @include bg-img(null, null, '../images/sprite.svg#bowl-wow-natural-balanced', no-repeat, cover, center center);
+            @include bg-img(
+                null,
+                null,
+                "../images/sprite.svg#bowl-wow-natural-balanced",
+                no-repeat,
+                cover,
+                center center
+            );
             background-color: #f5f8fd;
         }
-        
+
         &--first {
-            background-image: url('../images/sprite.svg#bowl-wow-super-premium-blueprint');
+            background-image: url("../images/sprite.svg#bowl-wow-super-premium-blueprint");
         }
-        
+
         &--second {
-            background-image: url('../images/sprite.svg#bowl-wow-super-premium-dog');
+            background-image: url("../images/sprite.svg#bowl-wow-super-premium-dog");
         }
-        
+
         &--third {
-            background-image: url('../images/sprite.svg#bowl-wow-super-premium-cat');
+            background-image: url("../images/sprite.svg#bowl-wow-super-premium-cat");
         }
     }
-    
+
     &__text p {
         line-height: 170%;
     }
@@ -455,6 +462,113 @@
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+}
+
+.palette {
+    display: flex;
+    height: 100vh;
+
+    &__wrapper {
+        overflow: hidden;
+        background-color: #f5f8fd;
+    }
+
+    &__content {
+        min-width: 33%;
+        display: flex;
+        padding: 80px 85px 100px 0;
+    }
+
+    &__body {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    &__title {
+        width: min-content;
+
+        &::before {
+            content: "04";
+        }
+    }
+
+    &__main {
+        flex-grow: 1;
+    }
+
+    &__main-title {
+        @include font(60px, 170%) {
+            @extend %stratos-lc-web-500;
+            text-transform: uppercase;
+        }
+    }
+
+    &__colors {
+        display: flex;
+        width: 100%;
+        flex: 0 0 67%;
+    }
+
+    &__colors-item {
+        display: flex;
+        align-items: flex-end;
+        flex-grow: 1;
+
+        cursor: pointer;
+        transition: flex-grow 0.5s $transitionTimingFunc;
+
+        .palette__colors-item__info {
+            display: none;
+        }
+
+        &--active {
+            flex-grow: 1.5;
+
+            .palette__colors-item__info {
+                display: flex;
+
+                & p:nth-child(2)::after {
+                    opacity: 1;
+                }
+            }
+        }
+    }
+
+    &__colors-item__info {
+        flex-direction: column;
+        gap: 10px;
+        margin: 0 0 118px 104px;
+
+        p {
+            position: relative;
+            font-size: 20px;
+            width: fit-content;
+
+            &:nth-child(2)::after {
+                content: "";
+                position: absolute;
+                width: 20px;
+                height: 20px;
+                top: 50%;
+                transform: translateY(-50%);
+                right: -40px;
+                opacity: 0;
+
+                transition: opacity 0.2s $transitionTimingFunc;
+
+                @include bg-img(null, null, "../images/sprite.svg#copy--black", no-repeat, cover, center center);
+            }
+        }
+
+        &--white {
+            color: $white-color;
+
+            p:nth-child(2)::after {
+                @include bg-img(null, null, "../images/sprite.svg#copy", no-repeat, cover, center center);
+            }
+        }
     }
 }
 
