--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -417,6 +417,7 @@
     }
 
     &__logo {
+
         &--first,
         &--second,
         &--third,
@@ -428,14 +429,12 @@
             left: 0;
             width: 100%;
             height: 100%;
-            @include bg-img(
-                null,
+            @include bg-img(null,
                 null,
                 "../images/sprite.svg#bowl-wow-natural-balanced",
                 no-repeat,
                 cover,
-                center center
-            );
+                center center);
             background-color: #f5f8fd;
         }
 
@@ -537,9 +536,30 @@
     }
 
     &__colors-item__info {
+        position: relative;
         flex-direction: column;
         gap: 10px;
         margin: 0 0 118px 104px;
+
+        &::before {
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            bottom: -30px;
+            left: 0;
+
+            @include bg-img(null, null, "../images/sprite.svg#copy--black", no-repeat, cover, center center);
+        }
+
+        &::after {
+            content: 'Скопировать';
+            position: absolute;
+            bottom: -30px;
+            left: 30px;
+
+            @include font(14px, 140%);
+        }
 
         p {
             position: relative;
@@ -566,6 +586,10 @@
             color: $white-color;
 
             p:nth-child(2)::after {
+                @include bg-img(null, null, "../images/sprite.svg#copy", no-repeat, cover, center center);
+            }
+
+            &::before {    
                 @include bg-img(null, null, "../images/sprite.svg#copy", no-repeat, cover, center center);
             }
         }
