added responsive layout to packages section

--- a/app/index.jade
+++ b/app/index.jade
@@ -78,6 +78,7 @@ html(lang='ru')
                     img(src="./images/content/packages-cat.png" alt="Кот")
                 .packages__image
                     img(src="./images/content/packages.png" alt="упаковки")
+                    img(src="./images/content/packages--mini.png" alt="упаковки")
             .logotype__wrapper
                 +section('white', 'logotype', 'Логотип')
                     .logotype__logo-wrapper
