--- a/app/components/organisms/footer.jade
+++ b/app/components/organisms/footer.jade
@@ -5,12 +5,13 @@ mixin footer()
         .container
             .footer__links
                 .row
-                    .col-md-3
+                    .col-lg-3
                         .footer__links-main
                             a.footer__links-main__logo(href='/')
                                 svg
                                     use(xlink:href="../../images/sprite.svg#bowl-wow-natural-balanced--white")
-                            +button('#', 'Подписаться на рассылку')
+                            .footer__links-main__btn
+                                +button('#', 'Подписаться на рассылку')
                             .footer__links-main__social
                                 a(href="#")
                                     span
@@ -20,7 +21,7 @@ mixin footer()
                                     span
                                         svg
                                             use(xlink:href="./images/sprite.svg#telegram")
-                    .col-md-3
+                    .col-lg-3
                         .footer__links-item
                             h2.footer__links-item__title Корма BOWL WOW
                             ul.footer__links-list
@@ -28,7 +29,7 @@ mixin footer()
                                     a.footer__links-list__item-link(href="#") Корма для кошек 
                                 li.footer__links-list__item
                                     a.footer__links-list__item-link(href="#") Корма для собак
-                    .col-md-3
+                    .col-lg-3
                         .footer__links-item
                             h2.footer__links-item__title Покупателям
                             ul.footer__links-list
@@ -38,7 +39,7 @@ mixin footer()
                                     a.footer__links-list__item-link(href="#") Помощь консультанта
                                 li.footer__links-list__item
                                     a.footer__links-list__item-link(href="#") Где купить?
-                    .col-md-3
+                    .col-lg-3
                         .footer__links-item
                             h2.footer__links-item__title О нас
                             ul.footer__links-list
@@ -52,14 +53,14 @@ mixin footer()
                                     a.footer__links-list__item-link(href="#") Контакты
             .footer__info
                 .row
-                    .col-md-6
+                    .col-lg-6
                         p.footer__info-text Юридический адрес: 142000 Московская область, город Домодедово, Каширское шоссе, дом 7, офис 59
-                    .col-md-3
+                    .col-lg-3
                         a.footer__info-communication(href="#")
                             svg
                                 use(xlink:href="./images/sprite.svg#phone")
                             p +7 (499) 444 02 96
-                    .col-md-3
+                    .col-lg-3
                         a.footer__info-communication(href="#")
                             svg
                                 use(xlink:href="./images/sprite.svg#email")
