added responsive fonts section

--- a/app/index.jade
+++ b/app/index.jade
@@ -203,6 +203,26 @@ html(lang='ru')
                                     p web #007580
                                     p CMYK 99 26 43 15
 
+            .fonts__wrapper
+                .container
+                    section.fonts#fonts
+                        .fonts__content
+                            .fonts__body
+                                .fonts__header.section-template__header
+                                    h3.fonts__title.section-template__header-title Шрифты
+                                .fonts__inner
+                                    .fonts-field
+                                        h3.fonts-field__title BEBAS NEUE CYRILLIC
+                                        h3.fonts-field__weight REGULAR
+                                        p.fonts-field__description Шрифт для заголовков и акцентных текстов
+                                    .fonts-field
+                                        h3.fonts-field__title MONTSERRAT
+                                        h3.fonts-field__weight MEDIUM / 
+                                            bold BOLD
+                                        p.fonts-field__description Шрифт для основного текста документов
+                        .fonts__image
+                            img(src="./images/sprite.svg#fonts-background", alt="фон с буквами")
+
             +section('dark', 'photostyle', 'Фотостиль')
                 .photostyle__info
                     .row
