--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -46,6 +46,14 @@
             margin: 0 0 84px 70px;
         }
     }
+
+    .fonts {
+        &__image {
+            min-width: calc(56% + ((100vw - 1080px) / 2));
+            height: fit-content;
+            margin: auto 0;
+        }
+    }
 }
 
 @media (max-width: 1260px) {
@@ -58,6 +66,29 @@
     .footer {
         &__docs {
             gap: 40px;
+        }
+    }
+
+    .fonts {
+        &__image {
+            min-width: calc(56% + ((100vw - 910px) / 2));
+
+            img {
+                width: 45vw;
+                margin-left: auto;
+            }
+        }
+    }
+}
+
+@media (max-width: 1120px) {
+    .fonts {
+        &__body {
+            padding: 80px 0;
+        }
+
+        &__image {
+            min-width: calc(56% + ((100vw - 860px) / 2));
         }
     }
 }
@@ -200,6 +231,19 @@
 
         &__colors-item {
             padding: 20px 20px 50px 20px;
+        }
+    }
+
+    .fonts {
+        display: block;
+
+        &__image {
+            min-width: 100vw;
+
+            img {
+                width: auto;
+                height: 400px;
+            }
         }
     }
 }
@@ -359,6 +403,15 @@
     }
 }
 
+@media (max-width: 660px) {
+    .fonts {
+        &__image img {
+            width: 323px;
+            height: 345px;
+        }
+    }
+}
+
 @media (max-width: 600px) {
     .menu-nav {
         &__item {
@@ -413,7 +466,7 @@
         &__links-main__btn {
             order: 1;
             width: 100%;
-            
+
             .button {
                 width: 100%;
             }
@@ -467,6 +520,29 @@
         }
     }
 
+    .fonts {
+        &__body {
+            padding: 50px 0 41px;
+        }
+
+        &__inner {
+            margin-top: 40px;
+            gap: 40px;
+        }
+    }
+
+    .fonts-field {
+
+        &__title,
+        &__weight {
+            font-size: 32px;
+        }
+
+        &__description {
+            font-size: 16px;
+        }
+    }
+
     .materials {
         padding: 80px 0 400px;
 
@@ -504,7 +580,7 @@
     .packages__image {
         display: flex;
         justify-content: center;
-        
+
         img {
             &:first-child {
                 display: none;
