--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -745,6 +745,7 @@
     position: relative;
     padding: 200px 0 564px;
     background-color: #f5f8fd;
+    overflow: hidden;
 
     &__inner {
         display: flex;
