--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -15,6 +15,7 @@ body.body {
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
+
     @include font(16px, 162%, $black-color) {
         @extend %stratos-lc-web-400;
     }
@@ -48,13 +49,18 @@ h3 {
     align-items: center;
     border-radius: 5px;
     border: 2px solid $white-color;
-    background-color: transparent;
+    background-color: $black-color;
     color: $white-color;
     font-size: 14px;
     @extend %stratos-lc-web-500;
     line-height: 120%;
     letter-spacing: 0.14px;
     text-transform: uppercase;
+
+    &:hover {
+        background-color: $white-color;
+        color: $black-color;
+    }
 }
 
 .download-button {
@@ -77,6 +83,23 @@ h3 {
         letter-spacing: 0.16px;
         text-transform: uppercase;
     }
+
+    &:hover {
+        background-color: $black-color;
+        color: $white-color;
+
+        svg use {
+            fill: $white-color;
+        }
+    }
+}
+
+.button,
+.download-button {
+    transition-property: color;
+    transition-property: background-color;
+    transition-duration: .3s;
+    transition-timing-function: $transitionTimingFunc;
 }
 
 .section-template {
@@ -111,6 +134,7 @@ h3 {
 }
 
 .screen__line {
+
     &--first,
     &--second,
     &--third,
@@ -120,7 +144,7 @@ h3 {
         width: 100%;
         height: 100%;
     }
-    
+
     &--first {
         background-color: #FEBBC5;
     }
