--- a/app/index.jade
+++ b/app/index.jade
@@ -237,7 +237,7 @@ html(lang='ru')
                             for imgObj in images
                                 .swiper-slide
                                     .photostyle__slider-slide
-                                        img(src="#{imgObj.src}" srcset="#{imgObj.src} 1x, #{imgObj.setSrc} 2x" alt="")
+                                        img(src="#{imgObj.src}" srcset="#{imgObj.src} 1x, #{imgObj.srcSet} 2x" alt="")
                     .photostyle__slider-button__wrapper
                         .photostyle__slider-button.photostyle__slider-button--prev ←
                         .photostyle__slider-button.photostyle__slider-button--next →
