--- a/app/index.jade
+++ b/app/index.jade
@@ -4,7 +4,7 @@ html(lang='ru')
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible" content="ie=edge")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
-        title BOWL-WOW
+        title BOWL WOW
         link(rel="stylesheet" href="css/style.min.css")
     body.body
         include ./components/templates/basicTemplate.jade
@@ -101,107 +101,112 @@ html(lang='ru')
                 section.logotype--fifth
 
             .palette__wrapper
-                .container
                     section.palette.palette--first#palette
-                        .palette__content
-                            .palette__body
-                                .palette__header.section-template__header
-                                    h3.palette__title.section-template__header-title цветовая палитра
-                                .palette__main
-                                    h2.palette__main-title brand
-                                .palette__footer
-                                    p.palette__footer-text Основная гамма бренда. Нельзя смешивать с гаммой собак.
-                        ul.palette__colors
-                            li.palette__colors-item(style="background-color: #ffffff;")
-                                .palette__colors-item__info
-                                    p Pantone 7641 C
-                                    p web #922c48
-                                    p CMYK 29 90 47 29
-                            li.palette__colors-item(style="background-color: #1E1E1C;")
-                                .palette__colors-item__info.palette__colors-item__info--white
-                                    p Pantone 7641 C
-                                    p web #922c48
-                                    p CMYK 29 90 47 29
+                        .container
+                            .palette__inner
+                                .palette__content
+                                    .palette__body
+                                        .palette__header.section-template__header
+                                            h3.palette__title.section-template__header-title цветовая палитра
+                                        .palette__main
+                                            h2.palette__main-title brand
+                                        .palette__footer
+                                            p.palette__footer-text Основная гамма бренда. Нельзя смешивать с гаммой собак.
+                                ul.palette__colors
+                                    li.palette__colors-item(style="background-color: #ffffff;")
+                                        .palette__colors-item__info
+                                            p(data-color-value="7641 C") Pantone 7641 C
+                                            p(data-color-value="#922c48") web #922c48
+                                            p(data-color-value="29,90,47,29") CMYK 29 90 47 29
+                                    li.palette__colors-item(style="background-color: #1E1E1C;")
+                                        .palette__colors-item__info.palette__colors-item__info--white
+                                            p(data-color-value="7641C") Pantone 7641 C
+                                            p(data-color-value="#922c48") web #922c48
+                                            p(data-color-value="29,90,47,29") CMYK 29 90 47 29
                     section.palette#palette-cat
-                        .palette__content
-                            .palette__body
-                                .palette__header.section-template__header
-                                    h3.palette__title.section-template__header-title цветовая палитра
-                                .palette__main
-                                    h2.palette__main-title CATS
-                                .palette__footer
-                                    p.palette__footer-text Основная гамма бренда. Нельзя смешивать с гаммой собак.
-                        ul.palette__colors
-                            li.palette__colors-item(style="background-color: #922c48;")
-                                .palette__colors-item__info.palette__colors-item__info--white
-                                    p Pantone - 7641 C
-                                    p web #922c48
-                                    p CMYK 29 90 47 29
-                            li.palette__colors-item(style="background-color: #f29934;")
-                                .palette__colors-item__info.palette__colors-item__info--white
-                                    p Pantone 2011 C
-                                    p web #f29934
-                                    p CMYK 2 47 84 0
-                            li.palette__colors-item(style="background-color: #feaebb;")
-                                .palette__colors-item__info.palette__colors-item__info--white
-                                    p Pantone Red 0331 C
-                                    p web #feaebb
-                                    p CMYK 0 43 14 0
-                            li.palette__colors-item(style="background-color: #6e7ba0;")
-                                .palette__colors-item__info.palette__colors-item__info--white
-                                    p Pantone 7667 C
-                                    p web #6e7ba0
-                                    p CMYK 63 48 20 4
+                        .container
+                            .palette__inner
+                                .palette__content
+                                    .palette__body
+                                        .palette__header.section-template__header
+                                            h3.palette__title.section-template__header-title цветовая палитра
+                                        .palette__main
+                                            h2.palette__main-title CATS
+                                        .palette__footer
+                                            p.palette__footer-text Основная гамма бренда. Нельзя смешивать с гаммой собак.
+                                ul.palette__colors
+                                    li.palette__colors-item(style="background-color: #922c48;")
+                                        .palette__colors-item__info.palette__colors-item__info--white
+                                            p(data-color-value="7641 C") Pantone - 7641 C
+                                            p(data-color-value="#922c48") web #922c48
+                                            p(data-color-value="29,90,47,29") CMYK 29 90 47 29
+                                    li.palette__colors-item(style="background-color: #f29934;")
+                                        .palette__colors-item__info.palette__colors-item__info--white
+                                            p(data-color-value="2011 C") Pantone 2011 C
+                                            p(data-color-value="#f29934") web #f29934
+                                            p(data-color-value="2,47,84,0") CMYK 2 47 84 0
+                                    li.palette__colors-item(style="background-color: #feaebb;")
+                                        .palette__colors-item__info.palette__colors-item__info--white
+                                            p(data-color-value="0331 C") Pantone Red 0331 C
+                                            p(data-color-value="#feaebb") web #feaebb
+                                            p(data-color-value="0,43,14,0") CMYK 0 43 14 0
+                                    li.palette__colors-item(style="background-color: #6e7ba0;")
+                                        .palette__colors-item__info.palette__colors-item__info--white
+                                            p(data-color-value="7667 C") Pantone 7667 C
+                                            p(data-color-value="#6e7ba0") web #6e7ba0
+                                            p(data-color-value="63,48,20,4") CMYK 63 48 20 4
                     section.palette#palette-dog
-                        .palette__content
-                            .palette__body
-                                .palette__header.section-template__header
-                                    h3.palette__title.section-template__header-title цветовая палитра
-                                .palette__main
-                                    h2.palette__main-title DOGS
-                                .palette__footer
-                                    p.palette__footer-text Дополнительная гамма бренда. Нельзя смешивать с гаммой кошек.
-                        ul.palette__colors
-                            li.palette__colors-item(style="background-color: #e5bec3;")
-                                .palette__colors-item__info.palette__colors-item__info--white
-                                    p Pantone 692 C
-                                    p web #e5bec3
-                                    p CMYK 10 31 17 0
-                            li.palette__colors-item(style="background-color: #96262c;")
-                                .palette__colors-item__info.palette__colors-item__info--white
-                                    p Pantone 7622 C
-                                    p web #96262c
-                                    p CMYK 27 94 77 27
-                            li.palette__colors-item(style="background-color: #ff8300;")
-                                .palette__colors-item__info.palette__colors-item__info--white
-                                    p Pantone 151 C
-                                    p web #ff8300
-                                    p CMYK 0 59 94 0
-                            li.palette__colors-item(style="background-color: #ab0033;")
-                                .palette__colors-item__info.palette__colors-item__info--white
-                                    p Pantone 207 C
-                                    p web #ab0033
-                                    p MYK 22 100 67 17
-                            li.palette__colors-item(style="background-color: #006241;")
-                                .palette__colors-item__info.palette__colors-item__info--white
-                                    p Pantone 3425 C
-                                    p web #006241
-                                    p CMYK 96 33 82 29
-                            li.palette__colors-item(style="background-color: #d65d72;")
-                                .palette__colors-item__info.palette__colors-item__info--white
-                                    p Pantone 702 C
-                                    p web #d65d72
-                                    p CMYK 11 75 39 2
-                            li.palette__colors-item(style="background-color: #93a7cb;")
-                                .palette__colors-item__info.palette__colors-item__info--white
-                                    p Pantone 7681 C
-                                    p web #93a7cb
-                                    p CMYK 48 30 8 0
-                            li.palette__colors-item(style="background-color: #007580;")
-                                .palette__colors-item__info.palette__colors-item__info--white
-                                    p Pantone 7714 C
-                                    p web #007580
-                                    p CMYK 99 26 43 15
+                        .container
+                            .palette__inner
+                                .palette__content
+                                    .palette__body
+                                        .palette__header.section-template__header
+                                            h3.palette__title.section-template__header-title цветовая палитра
+                                        .palette__main
+                                            h2.palette__main-title DOGS
+                                        .palette__footer
+                                            p.palette__footer-text Дополнительная гамма бренда. Нельзя смешивать с гаммой кошек.
+                                ul.palette__colors
+                                    li.palette__colors-item(style="background-color: #e5bec3;")
+                                        .palette__colors-item__info.palette__colors-item__info--white
+                                            p(data-color-value="Pantone 692 C") Pantone 692 C
+                                            p(data-color-value="#e5bec3") web #e5bec3
+                                            p(data-color-value="10,31,17,0") CMYK 10 31 17 0
+                                    li.palette__colors-item(style="background-color: #96262c;")
+                                        .palette__colors-item__info.palette__colors-item__info--white
+                                            p(data-color-value="7622 C") Pantone 7622 C
+                                            p(data-color-value="#96262c") web #96262c
+                                            p(data-color-value="27,94,77,27") CMYK 27 94 77 27
+                                    li.palette__colors-item(style="background-color: #ff8300;")
+                                        .palette__colors-item__info.palette__colors-item__info--white
+                                            p(data-color-value="151 C") Pantone 151 C
+                                            p(data-color-value="#ff8300") web #ff8300
+                                            p(data-color-value="0,59,94,0") CMYK 0 59 94 0
+                                    li.palette__colors-item(style="background-color: #ab0033;")
+                                        .palette__colors-item__info.palette__colors-item__info--white
+                                            p(data-color-value="207 C") Pantone 207 C
+                                            p(data-color-value="#ab0033") web #ab0033
+                                            p(data-color-value="22,100,67,17") CMYK 22 100 67 17
+                                    li.palette__colors-item(style="background-color: #006241;")
+                                        .palette__colors-item__info.palette__colors-item__info--white
+                                            p(data-color-value="3425 C") Pantone 3425 C
+                                            p(data-color-value="#006241") web #006241
+                                            p(data-color-value="96,33,82,29") CMYK 96 33 82 29
+                                    li.palette__colors-item(style="background-color: #d65d72;")
+                                        .palette__colors-item__info.palette__colors-item__info--white
+                                            p(data-color-value="702 C") Pantone 702 C
+                                            p(data-color-value="#d65d72") web #d65d72
+                                            p(data-color-value="11,75,39,2") CMYK 11 75 39 2
+                                    li.palette__colors-item(style="background-color: #93a7cb;")
+                                        .palette__colors-item__info.palette__colors-item__info--white
+                                            p(data-color-value="7681 C") Pantone 7681 C
+                                            p(data-color-value="#93a7cb") web #93a7cb
+                                            p(data-color-value="48,30,8,0") CMYK 48 30 8 0
+                                    li.palette__colors-item(style="background-color: #007580;")
+                                        .palette__colors-item__info.palette__colors-item__info--white
+                                            p(data-color-value="7714 C") Pantone 7714 C
+                                            p(data-color-value="#007580") web #007580
+                                            p(data-color-value="99,26,43,15") CMYK 99 26 43 15
 
             .fonts__wrapper
                 .container
@@ -254,5 +259,6 @@ html(lang='ru')
 
     //- svg
     //-     use(xlink:href="./images/sprite.svg")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollToPlugin.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js")
     script(src="js/main.min.js" defer)
