added optimized images

--- a/app/index.jade
+++ b/app/index.jade
@@ -77,7 +77,7 @@ html(lang='ru')
                 .packages__cat
                     img(src="./images/content/packages-cat.png" alt="Кот" srcset="./images/content/packages-cat.png 1x, ./images/content/packages-cat@2x.png 2x")
                 .packages__image
-                    img(src="./images/content/packages.png" alt="упаковки" srcset="./images/content/packages.png 1x, ./images/content/packages@2x.png 2x")
+                    img(src="./images/content/packages.png" alt="упаковки")
                     img(src="./images/content/packages--mini.png" alt="упаковки" srcset="./images/content/packages--mini.png 1x, ./images/content/packages--mini@2x.png 2x")
             .logotype__wrapper
                 +section('white', 'logotype', 'Логотип')
