Changed extensions of included images in index.jade
Images with [.png, .jpg] was changed on .webp

--- a/app/index.jade
+++ b/app/index.jade
@@ -69,16 +69,16 @@ html(lang='ru')
                                 .screen__line--fourth
                                     .screen__line--fifth
                                         .screen__line--sixth
-                img(class="promotion__image-bowl" src="./images/content/promotion-bowl.png" alt="миска" loading="lazy" srcset="./images/content/promotion-bowl.png 1x, ./images/content/promotion-bowl@2x.png 2x")
-                img(class="promotion__image-dog" src="./images/content/indoor-plant-wooden-floor.png" alt="собака" loading="lazy" srcset="./images/content/indoor-plant-wooden-floor.png 1x, ./images/content/indoor-plant-wooden-floor@2x.png 2x")
+                img(class="promotion__image-bowl" src="./images/content/promotion-bowl.webp" alt="миска" loading="lazy" srcset="./images/content/promotion-bowl.webp 1x, ./images/content/promotion-bowl@2x.webp 2x")
+                img(class="promotion__image-dog" src="./images/content/indoor-plant-wooden-floor.webp" alt="собака" loading="lazy" srcset="./images/content/indoor-plant-wooden-floor.webp 1x, ./images/content/indoor-plant-wooden-floor@2x.webp 2x")
             +section('white', 'packages', 'Упаковки')
                 .packages__dog
-                    img(src="./images/content/packages-dog.png" alt="Собака" srcset="./images/content/packages-dog.png 1x, ./images/content/packages-dog@2x.png 2x")
+                    img(src="./images/content/packages-dog.webp" alt="Собака" srcset="./images/content/packages-dog.webp 1x, ./images/content/packages-dog@2x.webp 2x")
                 .packages__cat
-                    img(src="./images/content/packages-cat.png" alt="Кот" srcset="./images/content/packages-cat.png 1x, ./images/content/packages-cat@2x.png 2x")
+                    img(src="./images/content/packages-cat.webp" alt="Кот" srcset="./images/content/packages-cat.webp 1x, ./images/content/packages-cat@2x.webp 2x")
                 .packages__image
-                    img(src="./images/content/packages.png" alt="упаковки")
-                    img(src="./images/content/packages--mini.png" alt="упаковки" srcset="./images/content/packages--mini.png 1x, ./images/content/packages--mini@2x.png 2x")
+                    img(src="./images/content/packages.webp" alt="упаковки")
+                    img(src="./images/content/packages--mini.webp" alt="упаковки" srcset="./images/content/packages--mini.webp 1x, ./images/content/packages--mini@2x.webp 2x")
             .logotype__wrapper
                 +section('white', 'logotype', 'Логотип')
                     .logotype__logo-wrapper
@@ -238,7 +238,7 @@ html(lang='ru')
                 .photostyle__slider
                     .swiper
                         .swiper-wrapper
-                            - const images = [{ src: './images/content/slider/slide1.jpg', srcSet: './images/content/slider/slide1@2x.jpg' }, { src: './images/content/slider/slide2.jpg', srcSet: './images/content/slider/slide2@2x.jpg' }, { src: './images/content/slider/slide3.jpg', srcSet: './images/content/slider/slide3@2x.jpg' }, { src: './images/content/slider/slide4.jpg', srcSet: './images/content/slider/slide4@2x.jpg' }, { src: './images/content/slider/slide5.jpg', srcSet: './images/content/slider/slide5@2x.jpg' }, { src: './images/content/slider/slide6.jpg', srcSet: './images/content/slider/slide6@2x.jpg' }, { src: './images/content/slider/slide7.jpg', srcSet: './images/content/slider/slide7@2x.jpg' }, { src: './images/content/slider/slide8.jpg', srcSet: './images/content/slider/slide8@2x.jpg' }, { src: './images/content/slider/slide9.jpg', srcSet: './images/content/slider/slide9@2x.jpg' }]
+                            - const images = [{ src: './images/content/slider/slide1.webp', srcSet: './images/content/slider/slide1@2x.webp' }, { src: './images/content/slider/slide2.webp', srcSet: './images/content/slider/slide2@2x.webp' }, { src: './images/content/slider/slide3.webp', srcSet: './images/content/slider/slide3@2x.webp' }, { src: './images/content/slider/slide4.webp', srcSet: './images/content/slider/slide4@2x.webp' }, { src: './images/content/slider/slide5.webp', srcSet: './images/content/slider/slide5@2x.webp' }, { src: './images/content/slider/slide6.webp', srcSet: './images/content/slider/slide6@2x.webp' }, { src: './images/content/slider/slide7.webp', srcSet: './images/content/slider/slide7@2x.webp' }, { src: './images/content/slider/slide8.webp', srcSet: './images/content/slider/slide8@2x.webp' }, { src: './images/content/slider/slide9.webp', srcSet: './images/content/slider/slide9@2x.webp' }]
                             for imgObj in images
                                 .swiper-slide
                                     .photostyle__slider-slide
@@ -254,7 +254,7 @@ html(lang='ru')
                     +downloadButton('#', '', 'упаковки')
                     +downloadButton('#', '', 'единый архив')
                 .materials__image-dog
-                    img(src="./images/content/materials-dog.png" alt="собака" srcset="./images/content/materials-dog.png 1x, ./images/content/materials-dog@2x.png 2x")
+                    img(src="./images/content/materials-dog.webp" alt="собака" srcset="./images/content/materials-dog.webp 1x, ./images/content/materials-dog@2x.webp 2x")
 
 
     //- svg
